@@ -1,1 +1,0 @@
-/usr/share/automake-1.10/mdate-sh
