@@ -73,9 +73,21 @@
 - [ ] Make a top-level DEPENDENCIES file (from CI/before_install.sh)
   and remove all others
 ***** TODO Correct NEW project setup
+      CLOCK: [2016-01-04 lun. 19:42]--[2016-01-04 lun. 19:56] =>  0:14
       CLOCK: [2015-10-29 jeu. 22:37]--[2015-10-29 jeu. 22:46] =>  0:09
+- [-] Must change GNU headers dates for 2016
+  - [X] in client/
+  - [X] in logger/ (if there are sources)
+  - [ ] in meta/
+  - [ ] in network/
+  - [ ] in server/
+  - [ ] in services/
+  - [ ] in src/logger/
+  - [ ] in website/
+- [ ] The client can't find plugins.cfg, so we have an Ogre error
+  =Error: Shell widget menu has zero width and/or height=
 - [ ] Find how to compute FT and SLOC for the now-global TODO version
-- [ ] Individual projext README items should go here
+- [ ] Individual project README items should go here
 ***** DONE Must install cookiechoices on rainbrurpg.org
   CLOCK: [2015-09-27 dim. 18:21]--[2015-09-27 dim. 19:30] =>  1:09
 - [X] For reference
